--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
-    "zod": "^4.1.11",
-    "zustand": "^5.0.8"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
